# packerpy

./: .gitignore  CROSS_PARTIAL_REFERENCES_IMPLEMENTATION.md  DEEP_ASSIGNMENT_IMPLEMENTATION.md  README.md  STATIC_FIELDS.md  STATIC_FIELDS_IMPLEMENTATION.md  pyproject.toml  pytest.ini
docs/: AUTO_HEADERS_FOOTERS.md  AUTO_REPLY.md  FIELD_REFERENCES.md  INVALID_MESSAGE_HANDLING.md  JSON_QUICK_REFERENCE.md  JSON_SERIALIZATION.md  JSON_SERIALIZER_IMPLEMENTATION.md  MESSAGE_SCHEDULING.md  PROTOCOL_REFACTORING.md  TESTING_NOTES.md  TEST_IMPLEMENTATION_SUMMARY.md
examples/: auto_headers_footers_demo.py  auto_reply_demo.py  client_server_integration_demo.py  client_server_registry_demo.py  cross_partial_references_demo.py  deep_assignment_demo.py  field_references_demo.py  invalid_incomplete_messages_demo.py  message_echo.py  message_scheduling_demo.py  message_scheduling_with_updates_demo.py  mixed_serialization_demo.py  protocol_registry_demo.py  scheduling_and_reply_integration_demo.py  send_message_demo.py  serialization_demo.py  static_fields_demo.py  tcp_echo_sync.py  test_no_warnings.py  udp_echo_sync.py
src/packerpy/: __init__.py  client.py  server.py
tests/: README.md
tests/integration/: test_client_multiple_sends.py
tests/unit/: test_auto_headers_footers.py  test_auto_reply.py  test_client.py  test_client_server_auto_reply.py  test_config.py  test_cross_partial_field_references.py  test_deep_assignment.py  test_field_references.py  test_handlers.py  test_invalid_messages.py  test_json_serializer.py  test_message.py  test_message_partial.py  test_protocol.py  (+10 more)
(+17 files in other folders)
